--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,22 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Two
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>Tab Two</ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+    <ion-button (click)="openPopup()">open popup</ion-button>
+    <div>
+        <ion-list>
+            <ion-item *ngFor="let data of testData">
+                {{data.name}}
+            </ion-item>
+        </ion-list>
+        <ion-infinite-scroll threshold="50px" (ionInfinite)="loadMoreData($event)">
+            <ion-infinite-scroll-content
+            loadingSpinner="crescent"
+            loadingText="Plese Wait...">
+            </ion-infinite-scroll-content>
+        </ion-infinite-scroll>
+    </div>
+</ion-content>
